Set retrievable local storage for today

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
     <div class="holder">
       <h3 id="date"></h3>
     </div>
-    <div class="holder display">
-      <div id="one">1. </div>
-      <div id="two">2. </div>
-      <div id="thr">3. </div>
-    </div>
+    <ol id="glist"></ol>
     <div class="holder input">
       <form id="form" onsubmit="return false">
         <label>
