--- a/index.html
+++ b/index.html
@@ -2,22 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goal for Today</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Goals for Today</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="binoculars-solid.svg">
   </head>
   <body>
-    <div class="holder">
-      <h3 id="date"></h3>
-    </div>
-    <ol id="glist"></ol>
-    <div class="holder input">
-      <form id="form" onsubmit="return false">
-        <label>
-          <input id="new" type="text" name="input" placeholder="Enter your goal here">
-        </label>
-        <button id="submit" type="submit" value="submit">submit</button>
-      </form>
-    </div>
+    <section class="container">
+      <div class="card red">
+        <div class="cardcard">
+          <div class="date">
+            <h4 id="date"></h4>
+          </div>
+          <div class="input">
+            <form id="form" onsubmit="return false">
+              <label>
+                <input id="new" type="text" name="input" placeholder="Enter your goals here">
+              </label>
+            </form>
+            <ol id="glist"></ol>
+          </div>
+        </div>
+      </div>
+      <div class="card blue">
+        <div class="cardcard"></div>
+      </div>
+    </section>
     <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
