Update variables for modularity

--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
   </head>
   <body>
     <section class="container">
-      <div class="card red">
+      <div class="card">
         <div class="cardcard">
           <div class="date">
-            <h4 id="date"></h4>
+            <h4 id="gdate"></h4>
           </div>
           <div class="input">
-            <form id="form" onsubmit="return false">
+            <form onsubmit="return false">
               <label>
-                <input id="new" type="text" name="input" placeholder="Enter your goals here">
+                <input id="gnew" type="text" name="input" placeholder="Enter Goals">
               </label>
             </form>
             <ol id="glist"></ol>
           </div>
         </div>
       </div>
-      <div class="card blue">
-        <div class="cardcard"></div>
+      <div class="card">
+        <div class="cardcard">
+          
+        </div>
       </div>
     </section>
     <script src="js/app.js" type="text/javascript"></script>
