Create working achievement list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="input">
             <form onsubmit="return false">
               <label>
-                <input id="gnew" type="text" name="input" placeholder="Enter Goals">
+                <input id="gnew" type="text" name="input" placeholder="Set your goals">
               </label>
             </form>
             <ol id="glist"></ol>
@@ -26,7 +26,17 @@
       </div>
       <div class="card">
         <div class="cardcard">
-          
+          <div class="date">
+            <h4 id="adate"></h4>
+          </div>
+          <div class="input">
+            <form onsubmit="return false">
+              <label>
+                <input id="anew" type="text" name="input" placeholder="Record your achievements">
+              </label>
+            </form>
+            <ol id="alist"></ol>
+          </div>
         </div>
       </div>
     </section>
