Build CSS crossout on goal list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="container">
-      <div class="card">
+      <div class="card goal">
         <div class="cardcard">
           <div class="date">
             <h4 id="gdate"></h4>
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-      <div class="card">
+      <div class="card achi">
         <div class="cardcard">
           <div class="date">
             <h4 id="adate"></h4>
