Set icon button location

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Goals for Today</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="binoculars-solid.svg">
+    <link href="fontawesome/css/all.css" rel="stylesheet">
   </head>
   <body>
     <section class="container">
@@ -22,6 +23,10 @@
             </form>
             <ol id="glist"></ol>
           </div>
+          <footer>
+            <i class="fas fa-trash-alt"></i>
+            <i class="fas fa-bars"></i>
+          </footer>
         </div>
       </div>
       <div class="card achi">
