Set reset listener and function and change icons

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ol id="glist"></ol>
           </div>
           <footer>
-            <i class="fas fa-trash-alt"></i>
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-redo" id="gReset"></i>
+            <i class="fas fa-plus"></i>
           </footer>
         </div>
       </div>
