Create title tag for footer button

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ol id="glist"></ol>
           </div>
           <footer>
-            <i class="fas fa-redo" id="gReset"></i>
-            <i class="fas fa-plus"></i>
+            <i class="fas fa-redo" id="gReset" title="Reset card"></i>
+            <i class="fas fa-plus" title="Create card for tomorrow"></i>
           </footer>
         </div>
       </div>
