Create today's card dynamically

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="fontawesome/css/all.css" rel="stylesheet">
   </head>
   <body>
-    <section class="container">
+    <!-- <section class="container">
       <div class="card goal">
         <div class="cardcard">
           <div class="date">
@@ -44,7 +44,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
