Setup scrollIntoSection and 100vh for mobile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="fontawesome/css/all.css" rel="stylesheet">
   </head>
   <body>
+    <main id="snapcontainer"></main>
     <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
