--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section class="outter" id="out">
       <div class="container" id="sec">
-        <i class="fas mid fa-caret-left"></i>
+        <!-- <i class="fas mid fa-caret-left"></i> -->
         <div class="card">
           <div class="cardcard goal">
             <div class="date">
@@ -38,7 +38,7 @@
             <div class="main">
               <form onsubmit="return false">
                 <label>
-                  <input id="anew" type="text" name="input" placeholder=" Achievements">
+                  <input id="anew" type="text" name="input" placeholder=" Chores">
                 </label>
               </form>
               <ol id="alist"></ol>
@@ -50,7 +50,7 @@
           </footer>
           </div>
         </div>
-        <i class="fas mid fa-caret-right"></i>
+        <!-- <i class="fas mid fa-caret-right"></i> -->
       </div>
     </section>
     <script src="js/daycard.js" type="text/javascript"></script>
