Implement drag delete mechanism

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
               <ol id="glist"></ol>
             </div>
             <footer>
-              <i class="fas fasd fa-bars grey"></i>
-              <i class="fas fasd fa-chevron-right grey" id="gFlip"></i>
-              <i class="fas fasd fa-trash grey"></i>
+              <i class="fas fa-bars grey normalbutton"></i>
+              <i class="fas fa-chevron-right grey normalbutton" id="gFlip"></i>
+              <i class="fas fa-trash grey trashbutton"></i>
             </footer>
           </div>
           <div class="cardcard achi">
@@ -44,9 +44,9 @@
               <ol id="alist"></ol>
             </div>
             <footer>
-            <i class="fas fasd fa-bars grey"></i>
-            <i class="fas fasd fa-chevron-left grey" id="aFlip"></i>
-            <i class="fas fasd fa-trash grey"></i>
+            <i class="fas fa-bars grey normalbutton"></i>
+            <i class="fas fa-chevron-left grey normalbutton" id="aFlip"></i>
+            <i class="fas fa-trash grey trashbutton"></i>
           </footer>
           </div>
         </div>
