Update prepCardContent logic

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                   <input id="gnew" type="text" name="input" placeholder=" Goals">
                 </label>
               </form>
-              <ol id="glist"></ol>
+              <ol class = 'dragcontainer' id="glist"></ol>
             </div>
             <footer>
               <i class="fas fa-bars grey normalbutton"></i>
               <i class="fas fa-chevron-right grey normalbutton" id="gFlip"></i>
-              <i class="fas fa-trash grey trashbutton"></i>
+              <i class="fas fa-trash grey trashbutton" title="Drag an item here to delete"></i>
             </footer>
           </div>
           <div class="cardcard achi">
@@ -41,12 +41,12 @@
                   <input id="anew" type="text" name="input" placeholder=" Chores">
                 </label>
               </form>
-              <ol id="alist"></ol>
+              <ol class = 'dragcontainer' id="alist"></ol>
             </div>
             <footer>
             <i class="fas fa-bars grey normalbutton"></i>
             <i class="fas fa-chevron-left grey normalbutton" id="aFlip"></i>
-            <i class="fas fa-trash grey trashbutton"></i>
+            <i class="fas fa-trash grey trashbutton" title="Drag an item here to delete"></i>
           </footer>
           </div>
         </div>
