Setup pre/next button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <section class="outter" id="out">
+      <i class="fas mid fa-caret-left dbutton" id='previous' title='Previous day'></i>
       <div class="container" id="sec">
-        <!-- <i class="fas mid fa-caret-left"></i> -->
         <div class="card">
           <div class="cardcard goal">
             <div class="date">
@@ -26,8 +26,8 @@
               <ol class = 'dragcontainer' id="glist"></ol>
             </div>
             <footer>
-              <i class="fas fa-bars grey normalbutton"></i>
-              <i class="fas fa-chevron-right grey normalbutton" id="gFlip"></i>
+              <i class="fas fa-bars grey underconstruction" title='Under construction'></i>
+              <i class="fas fa-chevron-right grey normalbutton" id="gFlip" title='Flip!'></i>
               <i class="fas fa-trash grey trashbutton" title="Drag an item here to delete"></i>
             </footer>
           </div>
@@ -44,14 +44,14 @@
               <ol class = 'dragcontainer' id="alist"></ol>
             </div>
             <footer>
-            <i class="fas fa-bars grey normalbutton"></i>
-            <i class="fas fa-chevron-left grey normalbutton" id="aFlip"></i>
+            <i class="fas fa-bars grey underconstruction" title='Under construction'></i>
+            <i class="fas fa-chevron-left grey normalbutton" id="aFlip" title='Flip!'></i>
             <i class="fas fa-trash grey trashbutton" title="Drag an item here to delete"></i>
           </footer>
           </div>
         </div>
-        <!-- <i class="fas mid fa-caret-right"></i> -->
       </div>
+      <i class="fas mid fa-caret-right dbutton" id='next' title='Next day'></i>
     </section>
     <script src="js/daycard.js" type="text/javascript"></script>
   </body>
