--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   </head>
   <body>
     <section class="outter" id="out">
+      <!-- Previous Btn -->
       <i class="fas mid fa-caret-left dbutton" id='previous' title='Previous day'></i>
+
+      <!-- Card -->
       <div class="container" id="sec">
         <div class="card">
+          <!-- Goals -->
           <div class="cardcard goal">
             <div class="date">
               <h4 id="gdate"></h4>
@@ -31,6 +35,8 @@
               <i class="fas fa-trash grey trashbutton" title="Drag an item here to delete"></i>
             </footer>
           </div>
+
+          <!-- Achivements -->
           <div class="cardcard achi">
             <div class="date">
               <h4 id="adate"></h4>
@@ -44,15 +50,18 @@
               <ol class = 'dragcontainer' id="alist"></ol>
             </div>
             <footer>
-            <i class="fas fa-bars grey underconstruction" title='Under construction'></i>
-            <i class="fas fa-chevron-left grey normalbutton" id="aFlip" title='Flip!'></i>
-            <i class="fas fa-trash grey trashbutton" title="Drag an item here to delete"></i>
-          </footer>
+              <i class="fas fa-bars grey underconstruction" title='Under construction'></i>
+              <i class="fas fa-chevron-left grey normalbutton" id="aFlip" title='Flip!'></i>
+              <i class="fas fa-trash grey trashbutton" title="Drag an item here to delete"></i>
+            </footer>
           </div>
         </div>
       </div>
+
+      <!-- Next Btn -->
       <i class="fas mid fa-caret-right dbutton" id='next' title='Next day'></i>
     </section>
+
     <script src="js/daycard.js" type="text/javascript"></script>
   </body>
 </html>
